# curia

./: README.md  curia_image_processor.py  modeling_dinov2.py  pre_processor.py  pyproject.toml  simple_test.py  trainer.py
.github/workflows/: main.yml
configs/: abdominal-trauma.yaml  anatomy-ct.yaml  anatomy-mri.yaml  atlas-stroke.yaml  covidx-ct.yaml  deep-lesion-site.yaml  emidec-classification-mask.yaml  ich.yaml  ixi.yaml  kits.yaml  kneeMRI.yaml  luna16-3D.yaml  luna16.yaml  neural_foraminal_narrowing.yaml  oasis.yaml  spinal_canal_stenosis.yaml  subarticular_stenosis.yaml
